--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
         <h4 style="margin-top:3px;">My Friends</h4>
         <div class="container">
           <p>This is my other family.I have the bestest set of friends</p>
-          <p>My friends all have different skillset and are very unique</p>
-          <p>Out of them pranay is my greatest friend.</p>
-          <p>My friends have many qualities and if i keep talking about them a whole web page would be filled</p>
+          <p>They remain by my side through hardships and failures</p>
+          <p>My friends are extremely faithful</p>
+          <p>Friendship is a divine relationship</p>
+          <p>Their love is unconditional and true</p>
         </div>
         <img src="frnds.jpg " alt="My image" style="width:250px; height:250px;" class="frnds">
     </div>
